--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-hgjghjghjghj
-jkhjkhjkhjkhj
-gdfgdfg
-coucou
-jdtyjdtyjdyjtyjtyj
-prout
-tyutyuytutyu 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="publique/css/style.css" />
+    <title>Les Films de Plein Air</title>
+</head>
+<body>
+    
+</body>
+</html>
