--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="publique/css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
 <body>
-    
+
+    <header>
+        <div class="pc">
+            <nav class="__tete">
+                <li><a href="public/pages/programmation.html">Programmation et reservation</a></li>
+                <li><a href="public/pages/actualite.html">Actualité</a></li>
+            </nav>
+        </div>
+    </header>
+
+    <Section class="festival">
+
+    </Section>
+
+    <Section class="actualité">
+
+    </Section>
+
+    <Footer>
+        <nav class="pied">
+            <li><a href="public/pages/contact.html">Nous contacter</a></li>
+            <li><a href="public/pages/infos.html">Infos pratique</a></li>
+            <li><a href="public/pages/confidencialite.html">Politique de confidencialité</a></li>
+        </nav>
+    </Footer>
 </body>
 </html>
