--- a/public/pages/actualite.html
+++ b/public/pages/actualite.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="/../public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
-<body>
+<body class="actu">
 
     <header>
         <div class="pc">
+            <a href="/../../index.html" class="titre">Les films en plein air</a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -18,28 +19,27 @@
         </div>
     </header>
 
-    <Section class="contact">
-        <h1>Pour nous contacter</h1>
-        <div class="adress">
-            18 rue de jesaispasquoi
-            hfjgfiejf
-            Tel : 0000000000
-            De 9h à 10h
-        </div>
-
-        <form id="message">
-
-              <label>Nom</label>
-              <input type="text" class="form-control" name="lastName"required>
-
-              <label>Courriel</label>
-                <input type="email"  name="email" required>
-
-              <label>Message</label>
-              <input type="text" name="text" required>
-
-              <button type="submit">Envoyer</button>
-          </form>
+    <Section>
+        <article class="blog">
+            <h2>Titre de l'article</h2>
+            <p>
+                Et quoniam apud eos ut in capite mundi morborum acerbitates celsius dominantur, ad quos vel sedandos omnis professio medendi torpescit, excogitatum est adminiculum sospitale nequi amicum perferentem similia videat, additumque est cautionibus paucis remedium aliud satis validum, ut famulos percontatum missos quem ad modum valeant noti hac aegritudine colligati, non ante recipiant domum quam lavacro purgaverint corpus. ita etiam alienis oculis visa metuitur labes.
+                Sed tamen haec cum ita tutius observentur, quidam vigore artuum inminuto rogati ad nuptias ubi aurum dextris manibus cavatis offertur, inpigre vel usque Spoletium pergunt. haec nobilium sunt instituta.
+                Apud has gentes, quarum exordiens initium ab Assyriis ad Nili cataractas porrigitur et confinia Blemmyarum, omnes pari sorte sunt bellatores seminudi coloratis sagulis pube tenus amicti, equorum adiumento pernicium graciliumque camelorum per diversa se raptantes, in tranquillis vel turbidis rebus: nec eorum quisquam aliquando stivam adprehendit vel arborem colit aut arva subigendo quaeritat victum, sed errant semper per spatia longe lateque distenta sine lare sine sedibus fixis aut legibus: nec idem perferunt diutius caelum aut tractus unius soli illis umquam placet.
+            </p>
+            <img src="" alt="">
+            <span>Date</span>
+        </article>
+        <article class="blog">
+            <h2>Titre de l'article</h2>
+            <p>
+                Et quoniam apud eos ut in capite mundi morborum acerbitates celsius dominantur, ad quos vel sedandos omnis professio medendi torpescit, excogitatum est adminiculum sospitale nequi amicum perferentem similia videat, additumque est cautionibus paucis remedium aliud satis validum, ut famulos percontatum missos quem ad modum valeant noti hac aegritudine colligati, non ante recipiant domum quam lavacro purgaverint corpus. ita etiam alienis oculis visa metuitur labes.
+                Sed tamen haec cum ita tutius observentur, quidam vigore artuum inminuto rogati ad nuptias ubi aurum dextris manibus cavatis offertur, inpigre vel usque Spoletium pergunt. haec nobilium sunt instituta.
+                Apud has gentes, quarum exordiens initium ab Assyriis ad Nili cataractas porrigitur et confinia Blemmyarum, omnes pari sorte sunt bellatores seminudi coloratis sagulis pube tenus amicti, equorum adiumento pernicium graciliumque camelorum per diversa se raptantes, in tranquillis vel turbidis rebus: nec eorum quisquam aliquando stivam adprehendit vel arborem colit aut arva subigendo quaeritat victum, sed errant semper per spatia longe lateque distenta sine lare sine sedibus fixis aut legibus: nec idem perferunt diutius caelum aut tractus unius soli illis umquam placet.
+            </p>
+            <img src="" alt="">
+            <span>Date</span>
+        </article>
     </Section>
 
     <Footer>
