--- a/public/pages/confidencialite.html
+++ b/public/pages/confidencialite.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="/../public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
 <body>
 
     <header>
         <div class="pc">
+            <a href="/../../index.html" class="titre">Les films en plein air</a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
