--- a/public/pages/infos.html
+++ b/public/pages/infos.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="/../public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
 <body>
 
     <header>
         <div class="pc">
+            <a href="/../../index.html" class="titre">Les films en plein air</a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -19,27 +20,7 @@
     </header>
 
     <Section class="contact">
-        <h1>Pour nous contacter</h1>
-        <div class="adress">
-            18 rue de jesaispasquoi
-            hfjgfiejf
-            Tel : 0000000000
-            De 9h à 10h
-        </div>
 
-        <form id="message">
-
-              <label>Nom</label>
-              <input type="text" class="form-control" name="lastName"required>
-
-              <label>Courriel</label>
-                <input type="email"  name="email" required>
-
-              <label>Message</label>
-              <input type="text" name="text" required>
-
-              <button type="submit">Envoyer</button>
-          </form>
     </Section>
 
     <Footer>
