--- a/public/pages/confidencialite.html
+++ b/public/pages/confidencialite.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="pc">
-            <a href="/../../index.html" class="titre">Les films en plein air</a>
+            <a href="/../../index.html" class="titre"><h1>Les films en plein air</h1></a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -20,7 +20,6 @@
     </header>
 
     <Section class="confidentialité">
-        <h1>Notre politique de confidentialité</h1>
         <h2>QUI SOMMES-NOUS ?</h2>
         L’adresse de notre site est : <a href="">https://Les-Films-de-Plein-Air.com</a> .
         
