--- a/public/pages/infos.html
+++ b/public/pages/infos.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="pc">
-            <a href="/../../index.html" class="titre">Les films en plein air</a>
+            <a href="/../../index.html" class="titre"><h1>Les films en plein air</h1></a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -19,8 +19,15 @@
         </div>
     </header>
 
-    <Section class="contact">
-
+    <Section class="infos">
+        <div class="rejoindre">
+            <h2>Comment nous rejoindre ?</h2>
+            <p>
+                A partire de 17h avec votre reservation. <br>
+                Métro Monceau
+            </p>
+            <img src="../images/plan.jpg" alt="plan">
+        </div>
     </Section>
 
     <Footer>
