--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="pc">
-            <a href="/../../index.html" class="titre">Les films en plein air</a>
+            <a href="/../../index.html" class="titre"><h1>Les films en plein air</h1></a>
             <nav class="__tete">
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -20,27 +20,27 @@
     </header>
 
     <Section class="contact">
-        <h1>Pour nous contacter</h1>
+        <h2>Pour nous contacter</h2>
         <div class="adress">
-            18 rue de jesaispasquoi
-            hfjgfiejf
-            Tel : 0000000000
-            De 9h à 10h
+            10 Rue Lamarck <br>
+            75018 Paris <br>
+            Tel : 01 42 64 90 23 <br>
+            De 9h à 17h
         </div>
 
         <form id="message">
 
-              <label>Nom</label>
-              <input type="text" class="form-control" name="lastName"required>
+            <label>Nom</label>
+            <input type="text" name="lastName"required>
 
-              <label>Courriel</label>
-                <input type="email"  name="email" required>
+            <label>Courriel</label>
+            <input type="email"  name="email" required>
 
-              <label>Message</label>
-              <input type="text" name="text" required>
+            <label>Message</label>
+            <textarea  name="text" rows="5" required></textarea>
 
-              <button type="submit">Envoyer</button>
-          </form>
+            <button type="submit">Envoyer</button>
+        </form>
     </Section>
 
     <Footer>
