--- a/public/pages/programmation.html
+++ b/public/pages/programmation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/../public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
-<body class="prog">
+<body>
 
     <header>
         <div class="pc">
@@ -19,49 +19,41 @@
         </div>
     </header>
 
-    <Section class="Sprog">
+    <Section class="prog">
         <div class="row">
             <div class="jour">
                 <h2>Le 5 août</h2>
-                <div class="5">
-                    <h3>Troll 2</h3>
-                    <img src="../images/Troll.jpg" alt="Affiche film Troll 2">
-                    <span>Genre : Horreur</span> <br>
-                    <span>Sinopsys : La famille Waits passe ses vacances dans la ville de Nilbog. Rapidement, leurs vacances tournent au cauchemar, car la ville est infestée de gobelins végétariens qui veulent transformer la famille en plantes pour les manger.</span> <br>
-                    <a class="button" href="#popup1">Réserver</a>
-                </div>
+                <h3>Troll 2</h3>
+                <a href="../images/Troll.jpg"><img src="../images/Troll.jpg" alt="Affiche film Troll 2"></a>
+                <span>Genre : Horreur</span> <br>
+                <span>Sinopsys : La famille Waits passe ses vacances dans la ville de Nilbog. Rapidement, leurs vacances tournent au cauchemar, car la ville est infestée de gobelins végétariens qui veulent transformer la famille en plantes pour les manger.</span> <br>
+                <a class="button" href="#popup1">Réserver</a>
             </div>
             <div class="jour">
                 <h2>Le 6 août</h2>
-                <div class="5">
-                    <h3>Appel d'urgence</h3>
-                    <img src="../images/Miracletheatrical.jpg" alt="Affiche film Appel d'urgence">
-                    <span>Genre : Action</span> <br>
-                    <span>Sinopsys : Une nuit, après un rendez-vous raté avec la femme de sa vie, un homme reçoit dans une cabine téléphonique l'appel désespéré d'un jeune militaire qui tente de joindre son père et qui lui apprend, affolé, que des missiles nucléaires vont s'abattre sur Los Angeles dans 1 heure et 10 minutes.</span> <br>
-                    <a class="button" href="#popup1">Réserver</a>
-                </div>
+                <h3>Appel d'urgence</h3>
+                <a href="../images/Miracletheatrical.jpg"><img src="../images/Miracletheatrical.jpg" alt="Affiche film Appel d'urgence"></a>
+                <span>Genre : Action</span> <br>
+                <span>Sinopsys : Une nuit, après un rendez-vous raté avec la femme de sa vie, un homme reçoit dans une cabine téléphonique l'appel désespéré d'un jeune militaire qui tente de joindre son père et qui lui apprend, affolé, que des missiles nucléaires vont s'abattre sur Los Angeles dans 1 heure et 10 minutes.</span> <br>
+                <a class="button" href="#popup1">Réserver</a>
             </div>
         </div>
         <div class="row">
             <div class="jour">
                 <h2>Le 7 août</h2>
-                <div class="5">
-                    <h3>Présentateur vedette : La Légende de Ron Burgundy</h3>
-                    <img src="../images/Présentateurvedette.jpg" alt="Affiche film Présentateur vedette : La Légende de Ron Burgundy">
-                    <span>Genre : Comédie</span> <br>
-                    <span>Sinopsys : Durant les années 1970, Ron Burgundy, présentateur vedette, règne en maître sur San Diego avec toute son équipe : Brian Fantana, reporter, Brick Tamland, présentateur météo et Champ Kind, journal des sports. Mais l'arrivée de la journaliste Veronica Corningstone parmi l'équipe de Channel 4 vient chambouler la hiérarchie. Les hostilités entre Ron et Veronica éclatent alors pour devenir le présentateur du journal.</span> <br>
-                    <a class="button" href="#popup1">Réserver</a>
-                </div>
+                <h3>Présentateur vedette : La Légende de Ron Burgundy</h3>
+                <a href="../images/Présentateurvedette.jpg"><img src="../images/Présentateurvedette.jpg" alt="Affiche film Présentateur vedette : La Légende de Ron Burgundy"></a>
+                <span>Genre : Comédie</span> <br>
+                <span>Sinopsys : Durant les années 1970, Ron Burgundy, présentateur vedette, règne en maître sur San Diego avec toute son équipe : Brian Fantana, reporter, Brick Tamland, présentateur météo et Champ Kind, journal des sports. Mais l'arrivée de la journaliste Veronica Corningstone parmi l'équipe de Channel 4 vient chambouler la hiérarchie. Les hostilités entre Ron et Veronica éclatent alors pour devenir le présentateur du journal.</span> <br>
+                <a class="button" href="#popup1">Réserver</a>
             </div>
             <div class="jour">
                 <h2>Le 8 août</h2>
-                <div class="5">
-                    <h3>Save the Green Planet!</h3>
-                    <img src="../images/SavetheGreenPlanet.jpg" alt="Affiche film Save the Green Planet!">
-                    <span>Genre : Science-fiction</span> <br>
-                    <span>Sinopsys : Byeong-gu croit que la Terre va être envahie par une horde d'extra-terrestres. Il décide pour y parer d'enlever celui qu'il croit être l'agent numéro un des aliens : le richissime et puissant patron d'une entreprise de produits chimiques...</span> <br>
-                    <a class="button" href="#popup1">Réserver</a>
-                </div>
+                <h3>Save the Green Planet!</h3>
+                <a href="../images/SavetheGreenPlanet.jpg"><img src="../images/SavetheGreenPlanet.jpg" alt="Affiche film Save the Green Planet!"></a>
+                <span>Genre : Science-fiction</span> <br>
+                <span>Sinopsys : Byeong-gu croit que la Terre va être envahie par une horde d'extra-terrestres. Il décide pour y parer d'enlever celui qu'il croit être l'agent numéro un des aliens : le richissime et puissant patron d'une entreprise de produits chimiques...</span> <br>
+                <a class="button" href="#popup1">Réserver</a>
             </div>
         </div>
     </Section>
@@ -82,8 +74,8 @@
                 Suite à votre validation un courriel de confirmation vous sera envoyé.
             </div>
             <div class="bouton">
-                <a class="close" href="#">Annuler</a>
-                <button class="close" type="submit">Reserver</button>
+                <a class="close button" href="#">Annuler</a>
+                <a class="close button" href="#">Reserver</a>
             </div>
         </div>
     </div>
