--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
-<body class="index">
+<body>
 
     <header>
-        <div class="pc">
-            <a href="index.html" class="titre"><h1>Les films en plein air</h1></a>
-            <nav class="__tete">
+        <div>
+            <a href="index.html"><h1>Les films en plein air</h1></a>
+            <nav>
                 <li><a href="public/pages/programmation.html">Programmation et reservation</a></li>
                 <li><a href="public/pages/actualite.html">Actualité</a></li>
             </nav>
         </div>
     </header>
 
-    <Section class="festival">
-        <article class="__description">
+    <Section>
+        <article>
             L'association "Les Films de Plein Air" est heureux de vous acceuillir au parc Monceau à Paris, tous les soirs du 5 au 8 août 2022, de 18h à minuit, pour découvrir, ou redécouvrir des films d'auteur mythiques. </br>
             Sed fruatur sane hoc solacio atque hanc insignem ignominiam, quoniam uni praeter se inusta sit, putet esse leviorem, dum modo, cuius exemplo se consolatur, eius exitum expectet, praesertim cum in Albucio nec Pisonis libidines nec audacia Gabini fuerit ac tamen hac una plaga conciderit, ignominia senatus.
             Raptim igitur properantes ut motus sui rumores celeritate nimia praevenirent, vigore corporum ac levitate confisi per flexuosas semitas ad summitates collium tardius evadebant. et cum superatis difficultatibus arduis ad supercilia venissent fluvii Melanis alti et verticosi, qui pro muro tuetur accolas circumfusus, augente nocte adulta terrorem quievere paulisper lucem opperientes. arbitrabantur enim nullo inpediente transgressi inopino adcursu adposita quaeque vastare, sed in cassum labores pertulere gravissimos.
@@ -29,7 +28,7 @@
 
     <Section class="actualité">
         <h2>Nos derniére nouvelles</h2>
-        <article class="__blog">
+        <article>
             <h3>Titre de l'article</h3>
             <img src="public\images\photo1.jpeg" alt="description">
             <p>
@@ -41,7 +40,7 @@
             <span>Date</span>
         </article>
 
-        <article class="__blog">
+        <article>
             <h3>Titre de l'article</h3>
             <img src="public\images\Photo2.jpg" alt="description">
             <p>
@@ -55,7 +54,7 @@
     </Section>
 
     <Footer>
-        <nav class="pied">
+        <nav>
             <li><a href="public/pages/contact.html">Nous contacter</a></li>
             <li><a href="public/pages/infos.html">Infos pratique</a></li>
             <li><a href="public/pages/confidencialite.html">Politique de confidencialité</a></li>
