--- a/public/pages/programmation.html
+++ b/public/pages/programmation.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c30b777b7c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/../public/css/style.css" />
     <title>Les Films de Plein Air</title>
 </head>
 <body>
 
     <header>
-        <div class="pc">
-            <a href="/../../index.html" class="titre"><h1>Les films en plein air</h1></a>
-            <nav class="__tete">
+        <div>
+            <a href="/../../index.html"><h1>Les films en plein air</h1></a>
+            <nav>
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
             </nav>
@@ -74,14 +73,14 @@
                 Suite à votre validation un courriel de confirmation vous sera envoyé.
             </div>
             <div class="bouton">
-                <a class="close button" href="#">Annuler</a>
-                <a class="close button" href="#">Reserver</a>
+                <a class="button" href="#">Annuler</a>
+                <a class="button" href="#">Reserver</a>
             </div>
         </div>
     </div>
 
     <Footer>
-        <nav class="pied">
+        <nav>
             <li><a href="contact.html">Nous contacter</a></li>
             <li><a href="infos.html">Infos pratique</a></li>
             <li><a href="confidencialite.html">Politique de confidentialité</a></li>
