--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/../public/css/style.css" />
-    <title>Les Films de Plein Air</title>
+    <link rel="stylesheet" href="public/css/style.css" />
+    <title>Contact - Les Films de Plein Air</title>
 </head>
 <body>
 
     <header>
         <div>
-            <a href="/../../index.html"><h1>Les films en plein air</h1></a>
+            <a href="index.html"><h1>Les films en plein air</h1></a>
             <nav>
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
