--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div>
             <a href="index.html"><h1>Les films en plein air</h1></a>
             <nav>
-                <li><a href="public/pages/programmation.html">Programmation et reservation</a></li>
-                <li><a href="public/pages/actualite.html">Actualité</a></li>
+                <li><a href="programmation.html">Programmation et reservation</a></li>
+                <li><a href="actualite.html">Actualité</a></li>
             </nav>
         </div>
     </header>
@@ -55,9 +55,9 @@
 
     <Footer>
         <nav>
-            <li><a href="public/pages/contact.html">Nous contacter</a></li>
-            <li><a href="public/pages/infos.html">Infos pratique</a></li>
-            <li><a href="public/pages/confidencialite.html">Politique de confidencialité</a></li>
+            <li><a href="contact.html">Nous contacter</a></li>
+            <li><a href="infos.html">Infos pratique</a></li>
+            <li><a href="confidencialite.html">Politique de confidencialité</a></li>
         </nav>
     </Footer>
 </body>
