--- a/programmation.html
+++ b/programmation.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/../public/css/style.css" />
-    <title>Les Films de Plein Air</title>
+    <link rel="stylesheet" href="public/css/style.css" />
+    <title>Réservation - Les Films de Plein Air</title>
 </head>
 <body>
 
     <header>
         <div>
-            <a href="/../../index.html"><h1>Les films en plein air</h1></a>
+            <a href="index.html"><h1>Les films en plein air</h1></a>
             <nav>
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -23,7 +23,7 @@
             <div class="jour">
                 <h2>Le 5 août</h2>
                 <h3>Troll 2</h3>
-                <a href="../images/Troll.jpg"><img src="../images/Troll.jpg" alt="Affiche film Troll 2"></a>
+                <a href="public/images/Troll.jpg"><img src="public/images/Troll.jpg" alt="Affiche film Troll 2"></a>
                 <span>Genre : Horreur</span> <br>
                 <span>Sinopsys : La famille Waits passe ses vacances dans la ville de Nilbog. Rapidement, leurs vacances tournent au cauchemar, car la ville est infestée de gobelins végétariens qui veulent transformer la famille en plantes pour les manger.</span> <br>
                 <a class="button" href="#popup1">Réserver</a>
@@ -31,7 +31,7 @@
             <div class="jour">
                 <h2>Le 6 août</h2>
                 <h3>Appel d'urgence</h3>
-                <a href="../images/Miracletheatrical.jpg"><img src="../images/Miracletheatrical.jpg" alt="Affiche film Appel d'urgence"></a>
+                <a href="public/images/Miracletheatrical.jpg"><img src="public/images/Miracletheatrical.jpg" alt="Affiche film Appel d'urgence"></a>
                 <span>Genre : Action</span> <br>
                 <span>Sinopsys : Une nuit, après un rendez-vous raté avec la femme de sa vie, un homme reçoit dans une cabine téléphonique l'appel désespéré d'un jeune militaire qui tente de joindre son père et qui lui apprend, affolé, que des missiles nucléaires vont s'abattre sur Los Angeles dans 1 heure et 10 minutes.</span> <br>
                 <a class="button" href="#popup1">Réserver</a>
@@ -41,7 +41,7 @@
             <div class="jour">
                 <h2>Le 7 août</h2>
                 <h3>Présentateur vedette : La Légende de Ron Burgundy</h3>
-                <a href="../images/Présentateurvedette.jpg"><img src="../images/Présentateurvedette.jpg" alt="Affiche film Présentateur vedette : La Légende de Ron Burgundy"></a>
+                <a href="public/images/Présentateurvedette.jpg"><img src="public/images/Présentateurvedette.jpg" alt="Affiche film Présentateur vedette : La Légende de Ron Burgundy"></a>
                 <span>Genre : Comédie</span> <br>
                 <span>Sinopsys : Durant les années 1970, Ron Burgundy, présentateur vedette, règne en maître sur San Diego avec toute son équipe : Brian Fantana, reporter, Brick Tamland, présentateur météo et Champ Kind, journal des sports. Mais l'arrivée de la journaliste Veronica Corningstone parmi l'équipe de Channel 4 vient chambouler la hiérarchie. Les hostilités entre Ron et Veronica éclatent alors pour devenir le présentateur du journal.</span> <br>
                 <a class="button" href="#popup1">Réserver</a>
@@ -49,7 +49,7 @@
             <div class="jour">
                 <h2>Le 8 août</h2>
                 <h3>Save the Green Planet!</h3>
-                <a href="../images/SavetheGreenPlanet.jpg"><img src="../images/SavetheGreenPlanet.jpg" alt="Affiche film Save the Green Planet!"></a>
+                <a href="public/images/SavetheGreenPlanet.jpg"><img src="public/images/SavetheGreenPlanet.jpg" alt="Affiche film Save the Green Planet!"></a>
                 <span>Genre : Science-fiction</span> <br>
                 <span>Sinopsys : Byeong-gu croit que la Terre va être envahie par une horde d'extra-terrestres. Il décide pour y parer d'enlever celui qu'il croit être l'agent numéro un des aliens : le richissime et puissant patron d'une entreprise de produits chimiques...</span> <br>
                 <a class="button" href="#popup1">Réserver</a>
