--- a/actualite.html
+++ b/actualite.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/../public/css/style.css" />
-    <title>Les Films de Plein Air</title>
+    <link rel="stylesheet" href="public/css/style.css" />
+    <title>Actualité - Les Films de Plein Air</title>
 </head>
 <body >
 
     <header>
         <div>
-            <a href="/../../index.html"><h1>Les films en plein air</h1></a>
+            <a href="index.html"><h1>Les films en plein air</h1></a>
             <nav>
                 <li><a href="programmation.html">Programmation et reservation</a></li>
                 <li><a href="actualite.html">Actualité</a></li>
@@ -22,7 +22,7 @@
         <h2>Toutes notre actu ! </h2>
         <article>
             <h3>Titre de l'article</h3>
-            <img src="..\images\photo1.jpeg" alt="description">
+            <img src="public\images\photo1.jpeg" alt="description">
             <p>
                 Et quoniam apud eos ut in capite mundi morborum acerbitates celsius dominantur, ad quos vel sedandos omnis professio medendi torpescit, excogitatum est adminiculum sospitale nequi amicum perferentem similia videat, additumque est cautionibus paucis remedium aliud satis validum, ut famulos percontatum missos quem ad modum valeant noti hac aegritudine colligati, non ante recipiant domum quam lavacro purgaverint corpus. ita etiam alienis oculis visa metuitur labes.
                 Sed tamen haec cum ita tutius observentur, quidam vigore artuum inminuto rogati ad nuptias ubi aurum dextris manibus cavatis offertur, inpigre vel usque Spoletium pergunt. haec nobilium sunt instituta.
@@ -32,7 +32,7 @@
         </article>
         <article>
             <h3>Titre de l'article</h3>
-            <img src="..\images\Photo2.jpg" alt="description">
+            <img src="public\images\Photo2.jpg" alt="description">
             <p>
                 Et quoniam apud eos ut in capite mundi morborum acerbitates celsius dominantur, ad quos vel sedandos omnis professio medendi torpescit, excogitatum est adminiculum sospitale nequi amicum perferentem similia videat, additumque est cautionibus paucis remedium aliud satis validum, ut famulos percontatum missos quem ad modum valeant noti hac aegritudine colligati, non ante recipiant domum quam lavacro purgaverint corpus. ita etiam alienis oculis visa metuitur labes.
                 Sed tamen haec cum ita tutius observentur, quidam vigore artuum inminuto rogati ad nuptias ubi aurum dextris manibus cavatis offertur, inpigre vel usque Spoletium pergunt. haec nobilium sunt instituta.
